--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,17 @@
             android:layout_marginBottom="30px"
             android:background="#ffffff"
             android:text="开启抢单" />
+
+        <TextView
+            android:id="@+id/server_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/btn_start"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="11dp"
+            android:text="当前未开启"
+            android:textColor="#ffffff"
+            android:textSize="60px" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -135,6 +146,34 @@
                 android:layout_below="@+id/tv_hc"
                 android:layout_marginLeft="60px"
                 android:text="清除应用程序使用残留"
+                android:textSize="9sp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_error"
+            android:layout_width="match_parent"
+            android:layout_height="150px"
+            android:layout_below="@+id/layout_hc"
+            android:layout_marginTop="1.5px"
+            android:background="#ffffff"
+            android:clickable="true"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="60px"
+                android:text="错误反馈" />
+
+            <TextView
+                android:id="@+id/tv_loaderor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tv_error"
+                android:layout_marginLeft="60px"
+                android:text="出现未抢单，抢单失败，请点击此处提交错误日志"
                 android:textSize="9sp" />
         </RelativeLayout>
     </RelativeLayout>
