--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -293,7 +293,7 @@
         android:layout_marginTop="20px"
         android:background="#ffffff">
 
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="选择车型"
@@ -347,7 +347,7 @@
                 android:layout_marginLeft="50px"
                 android:layout_marginRight="20px"
                 android:background="#e2e2e2"/>
-        </LinearLayout>
+        </LinearLayout>-->
 
         <Button
             android:id="@+id/btn_sub"
