--- a/app/src/main/res/layout/dialog_loding.xml
+++ b/app/src/main/res/layout/dialog_loding.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -18,12 +17,11 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:textColor="#080808"
+            android:textColor="#0a0a0a"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="正在登录..."/>
 
     </LinearLayout>
-
 </LinearLayout>
